--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,6 @@
 <!--
 	Copyright Notice
 	rebase example
-	aaa
 -->
 <head>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -18,11 +17,10 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			aaa
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014aaa</p>
+		<p>&copy; Company 2014</p>
 	</footer>
 </body>
 </html>
