--- a/simple.html
+++ b/simple.html
@@ -2,6 +2,7 @@
 <!--
 	Copyright Notice
 	rebase example
+	aaa
 -->
 <head>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -17,10 +18,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
+			aaa
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Company 2014aaa</p>
 	</footer>
 </body>
 </html>
