adding changes after rebasing conflict

--- a/simple.html
+++ b/simple.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <!--
 	Copyright Notice
-	rebase example
 -->
 <head>
+	<title>extra</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
